--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
     <div class="css-container">
         <div class="css-options">
             <select class="js-select-camera"></select>
-            <button class="js-fullscreen" title="Screenshot / 스크린샷 찍기">
+            <button class="js-fullscreen" title="Fullscreen / 전체 화면">
                 <svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px" fill="#5f6368"><path d="M120-120v-200h80v120h120v80H120Zm520 0v-80h120v-120h80v200H640ZM120-640v-200h200v80H200v120h-80Zm640 0v-120H640v-80h200v200h-80Z"/></svg>
             </button>
-            <button class="js-capture" title="Fullscreen / 전체 화면">
+            <button class="js-capture" title="Screenshot / 스크린샷 찍기">
                 <svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px" fill="#5f6368"><path d="M480-260q75 0 127.5-52.5T660-440q0-75-52.5-127.5T480-620q-75 0-127.5 52.5T300-440q0 75 52.5 127.5T480-260Zm0-80q-42 0-71-29t-29-71q0-42 29-71t71-29q42 0 71 29t29 71q0 42-29 71t-71 29ZM160-120q-33 0-56.5-23.5T80-200v-480q0-33 23.5-56.5T160-760h126l74-80h240l74 80h126q33 0 56.5 23.5T880-680v480q0 33-23.5 56.5T800-120H160Zm0-80h640v-480H638l-73-80H395l-73 80H160v480Zm320-240Z"/></svg>
             </button>
             <button class="js-flip" title="Horizontal Flip / 좌우반전">
